--- a/bxf_doctor/view/index.html
+++ b/bxf_doctor/view/index.html
@@ -11,7 +11,7 @@
             height: 600px;
         }
         .mag-left{
-            margin-left:170px;
+            margin-left:120px;
             height: 50px;
             line-height: 50px;
         }
@@ -22,7 +22,7 @@
             list-style: none;
         }
         .list > li{
-            margin-left: 150px;
+            margin-left: 120px;
         }
       .list  > li:first-child{
             margin-left: 50px;
@@ -36,9 +36,29 @@
             /*background: #0c5460;*/
             margin-left: 50px;
         }
+        .pws{
+            display: none;
+        }
+        .quit{
+            margin-top: 2%;
+            text-align: center;
+            font-size: 20px;
+        }
+        .quit > button{
+            background: white;
+        }
+        body{
+            background-image: url("../img/bg.jpg");
+            background-size: 100%;
+        }
     </style>
 </head>
-<body>
+<body >
+    <div>
+        <div class="quit">
+            <button onclick="quit()">退出</button>
+        </div>
+    </div>
     <div>
             <div class="container border text-center bingli">
                 <ul id="myTab" class="nav nav-tabs container" role="tablist" >
@@ -46,8 +66,7 @@
                     <li class="mag-left"><a href="#rule" role="tab" data-toggle="tab">就诊</a></li>
                     <li class="mag-left"><a href="#forum" role="tab" data-toggle="tab" onclick="selectalldoctor()">参考医生</a></li>
                     <li class="mag-left"><a href="#security" role="tab"  data-toggle="tab" onclick="selectalldrug()">药品</a></li>
-
-
+                    <li class="mag-left"><a href="#personInfo" role="tab"  data-toggle="tab" onclick="selectallperson()">账号信息</a></li>
                 </ul>
                 <!-- 选项卡面板 -->
                 <div id="myTabContent" class="tab-content">
@@ -112,6 +131,35 @@
                         </div>
 
                     </div>
+                    <div class="tab-pane " id="personInfo">
+                        <div class="pane3">
+                            <table class="table table-bordered">
+                                <tr>
+                                    <td>名字</td>
+                                    <td class= "personname"></td>
+                                    <!-- <td>时间</td> -->
+                                </tr><tr>
+                                    <td>性别</td>
+                                    <td class="personsex"></td>
+                                </tr>
+                                <tr>
+                                    <td>手机</td>
+                                    <td class = "personphone"></td>
+                                </tr>
+
+
+
+                            </table>
+                            <button onclick="updatepassword()">修改密码</button>
+                            <div class="pws">
+                                <div>
+                                    <input type="password" placeholder="请输入旧密码">
+                                    <input type="password" placeholder="请输入新密码" id="newpwd">
+                                </div>
+                                <button onclick ="okpassword()">确认</button><button onclick="cancel()">取消</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="tab-pane " id="rule">
                         <!--<div>-->
                         <!--<span for="firstname" class="">名字</span>-->
@@ -134,14 +182,16 @@
                         <!--<input type="text" class=""  placeholder="请输入药品">-->
                         <!--</div>-->
                         <form  style="margin-top: 50px">
-                            姓名：<input type="text" name="name"><br>
-                            性别：<input type="text" name="sex" style="margin-top: 10px"><br>
-                            年龄：<input type="text" name="age" style="margin-top: 10px"><br>
-                            手机：<input type="text" name="phone" style="margin-top: 10px"><br>
-                            药品：<input type="text" name="drugname" style="margin-top: 10px"><br>
-                            数量：<input type="text" name="drugnumber" style="margin-top: 10px"><br>
-                            病因：<input type="text" name="pathogeny" style="margin-top: 10px"><br>
-                            方案：<input type="text" name="result" style="margin-top: 10px"><br>
+                            姓  名：<input id="name" type="text" name="name"><br>
+                            性  别：<input id="sex" type="text" name="sex" style="margin-top: 10px"><br>
+                            年  龄：<input id="age" type="text" name="age" style="margin-top: 10px"><br>
+                            手  机：<input id="phone" type="text" name="phone" style="margin-top: 10px"><br>
+                            药  品：<input id="drugname" type="text" name="drugname" style="margin-top: 10px"><br>
+                            生产地:<input id="factory" type="text" name="factory" style="margin-top: 10px"><br>
+                            数  量：<input id="num" type="text" name="num" style="margin-top: 10px"><br>
+                            价  格：<input id="price" type="text" name="price" style="margin-top: 10px"><br>
+                            病  因：<input id="pathogeny" type="text" name="pathogeny" style="margin-top: 10px"><br>
+                            方  案：<input id="result" type="text" name="result" style="margin-top: 10px"><br>
                             <input type="submit" onclick="addUser()">
                         </form>
                             <div id="success">
