--- a/bxf_patient/css/index.css
+++ b/bxf_patient/css/index.css
@@ -4,6 +4,7 @@
 .pane1 .tab{
     width:150px;
     margin-top:40px;
+    padding-top:30px;
     margin-left:30px;
 }
 .tab a{
@@ -11,6 +12,9 @@
     width:100%;
     height:50px;
     line-height:50px;
+}
+.tab a:hover{    
+    background:rgb(230, 239, 255);
 }
 
 .pane1 .tab-content{
